# Ibelieve-Finance

./: .eslintrc.json  .gitignore  .solhint.json  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  deploy-env.sh  deploy.sh  deploy.yml  docker-compose.yml  hardhat.config.js  hardhat.config.ts  index.html  jest.config.js  package-lock.json  package.json  prometheus.yml  start-server.sh  start-services.sh  stop-services.sh  test.txt  tsconfig.json  vite.config.ts  wget-log  wget-log.1
Documentação/: API.md  ARCHITECTURE.md  BACKEND.md  CIRCUITS.md  CONTRACTS.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION.md  FRONTEND.md  INSTALL.md  INTEGRATION.md  README.md  SECURITY.md  SMART_CONTRACTS.md  TESTING.md
alertmanager/: config.yml
backend/: .env-dev  .env-example  .env.local  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh  hardhat.config.ts  install.sh  jest.config.js  package-lock.json  package.json  start.sh
backups/: env-backup-2025-06-02T01-58-26-892Z.enc  env-backup-2025-06-02T02-04-31-810Z.enc  env-key-2025-06-02T01-58-26-892Z.txt  env-key-2025-06-02T02-04-31-810Z.txt
contracts/: ACMEToken.sol  ACMEToken.sol.new  SubwalletRegistry.sol  ZKProofRegistry.sol  hardhat.config.cjs  package-lock.json  package.json
docs/: ENVIRONMENT.md  technical.md
frontend/: .env-example  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  README.md  jest.config.js  (+9 more)
hasher/: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  babel.config.js  docker-compose.yml  jest.config.js  package-lock.json  package.json  prometheus.yml  redis.conf  start-server.sh  start-testnet.sh  tsconfig.json
hasher/.github/workflows/: ci.yml
hasher/alertmanager/: alertmanager.yml
hasher/alertmanager/templates/: email.tmpl  pagerduty.tmpl  slack.tmpl
hasher/common/: Cargo.toml
hasher/common/src/: error.rs  lib.rs
hasher/config/: cd.toml  ci.toml  development.toml  local.toml  production.toml  remote.toml  staging.toml  test.toml
hasher/grafana/dashboards/: application.json  ibeleve.json  services.json
hasher/grafana/provisioning/alerting/: alertmanager.yml  alerts.yaml
hasher/host/: Cargo.toml
hasher/host/src/: main.rs
hasher/jaeger/: config.yaml
hasher/logstash/pipeline/: logstash.conf
hasher/methods/guest/: Cargo.toml  README.md  config.json
hasher/methods/guest/src/: api.rs  blockchain.rs  cache.rs  config.rs  grpc_ia.rs  grpc_zkp.rs  main.rs  validations.rs
hasher/prometheus/: alert.rules  alertmanager.yml  prometheus.yml
hasher/prometheus/rules/: alerts.yml
hasher/prometheus/templates/: slack.tmpl
hasher/scripts/: backup-logs.sh  backup.sh  restore.sh  run_tests.sh  setup_dev.sh  start.sh  stop.sh
hasher/services/: Dockerfile
hasher/services/ai/: Cargo.toml  Dockerfile
hasher/services/ai/src/: api.rs  config.rs  lib.rs  main.rs  models.rs
hasher/services/ai/src/chat/: mod.rs  routes.rs  service.rs
hasher/services/ai/src/fraud_detection/: mod.rs  routes.rs  service.rs
hasher/services/ai/src/handlers/: health.rs  mod.rs
hasher/services/ai/src/risk_analysis/: mod.rs  routes.rs  service.rs
hasher/services/ai/src/services/: ai_service.rs  mod.rs
hasher/services/ai/src/tests/: ai_service_tests.rs
hasher/services/ai/src/zkp_optimization/: mod.rs  routes.rs  service.rs
hasher/services/api-gateway/: Cargo.toml
hasher/services/api-gateway/src/: main.rs
hasher/services/auth/: Cargo.toml
hasher/services/auth/src/: main.rs
hasher/services/auth/src/components/: FinancialForm.tsx  LoginForm.tsx  ProofStatus.tsx  ProofSubmit.tsx  WalletLogin.tsx
hasher/services/auth/src/handlers/: auth.rs  mod.rs  proof.rs
hasher/services/auth/src/pages/: Dashboard.tsx  Login.tsx
hasher/services/auth/src/services/: api.ts  auth.ts
hasher/services/blockchain/: Cargo.toml  Dockerfile  start.sh
hasher/services/blockchain/src/: api.rs  lib.rs  main.rs  models.rs  services.rs
hasher/services/blockchain/src/services/: blockchain_service.rs  mod.rs
hasher/services/blockchain/src/tests/: blockchain_service_tests.rs
hasher/services/common/: Cargo.toml
hasher/services/common/src/: config.rs  lib.rs
hasher/services/common/src/auth/: mod.rs
hasher/services/common/src/bulkhead/: mod.rs
hasher/services/common/src/circuit_breaker/: mod.rs
hasher/services/common/src/db/: mod.rs
hasher/services/common/src/db/migrations/: 001_initial_schema.sql
hasher/services/common/src/events/: mod.rs
hasher/services/common/src/health/: mod.rs
hasher/services/common/src/logging/: mod.rs
hasher/services/common/src/metrics/: mod.rs
hasher/services/common/src/middleware/: auth.rs  mod.rs  resilience.rs
hasher/services/common/src/rate_limit/: mod.rs
hasher/services/common/src/rate_limiter/: mod.rs
hasher/services/common/src/resilience/: mod.rs
hasher/services/common/src/retry/: mod.rs
hasher/services/common/src/tracing/: middleware.rs  mod.rs
hasher/services/user/: Cargo.toml
hasher/services/user/src/: api.rs  main.rs  models.rs
hasher/services/zkp/: Cargo.toml  Dockerfile
hasher/services/zkp/src/: api.rs  lib.rs  main.rs  models.rs
hasher/services/zkp/src/services/: mod.rs  zkp_service.rs
hasher/services/zkp/src/tests/: zkp_service_tests.rs
hasher/src/: index.js  index.ts
hasher/src/__tests__/: setup.js  setup.ts
hasher/src/__tests__/openfinance/: service.test.js  service.test.ts
hasher/src/config/: openfinance.d.ts  openfinance.js  openfinance.ts
hasher/src/openfinance/: config.d.ts  config.js  config.ts  service.d.ts  service.js  service.ts
hasher/src/openfinance/__tests__/: service.test.js  service.test.ts  setup.js  setup.ts
hasher/src/routes/: index.js  index.ts
hasher/src/types/: rate-limit-redis.d.ts
hasher/src/utils/: logger.d.ts  logger.js  logger.ts  metrics.d.ts  metrics.js  metrics.ts  security.d.ts  security.js  security.ts
hasher/tests/integration/: Cargo.toml  ai_blockchain_tests.rs  ai_zkp_tests.rs  blockchain_zkp_tests.rs  mod.rs
hasher/tests/integration/src/: ai_blockchain_tests.rs  ai_zkp_tests.rs  blockchain_zkp_tests.rs  lib.rs
(+314 files in other folders)
