[workspace]
resolver = "2"
members = [
    "services/auth",
    "services/zkp",
    "services/ai",
    "services/blockchain",
    "services/api-gateway",
    "services/user",
    "services/common"
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ibelieve Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp"] }
config = "0.13"
dotenv = "0.15"
jsonwebtoken = "8.3"
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }
actix-web = "4.3"
actix-cors = "0.6"
actix-rt = "2.8"
env_logger = "0.10"
log = "0.4"
