[workspace]
resolver = "2"
members = [
    "services/ai",
    "services/blockchain",
    "services/zkp",
    "services/common",
    "tests/integration"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ibelieve Finance Team"]
description = "Sistema distribuído para verificação de transações blockchain usando Zero Knowledge Proofs (ZKP)"
license = "ISC"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
actix-web = "4.0"
ethers = "2.0"
bellman = "0.14"
bls12_381 = "0.8"
ff = "0.13"
hex = "0.4"
mockall = "0.11"
actix-rt = "2.9"
test-log = "0.2"
reqwest = { version = "0.11", features = ["json"] }
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
sqlx-test = "0.7" 