[package]
name = "hasher-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = "0.19.0"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
web3 = "0.19"