[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = "3.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
redis = { version = "0.23", features = ["tokio-comp"] }
elasticsearch = "8.5"

[dev-dependencies]
actix-rt = { workspace = true }
test-log = { workspace = true } 