[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

common = { path = "../common" } 