[package]
name = "zkp-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
actix-web.workspace = true
bellman.workspace = true
bls12_381.workspace = true
ff.workspace = true
mockall.workspace = true
rand = "0.8"
bincode = "1.3"
common = { path = "../common" }

[dev-dependencies]
actix-rt = { workspace = true }
test-log = { workspace = true } 