[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
reqwest.workspace = true
test-log.workspace = true
common = { path = "../../services/common" } 